fix(mobile): Fix issue with mobile alignment

--- a/src/sass/controls/_pf-volume-bar.scss
+++ b/src/sass/controls/_pf-volume-bar.scss
@@ -4,6 +4,10 @@
 .pf-volume-button {
     float: left;
     margin-right: 4px;
+
+    &.pf-mobile {
+        line-height: 42px;
+    }
 }
 
 .pf-volume-slider-wrapper {
